--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
-project(sylar)
+project(ThreadPool)
 
 set(CMAKE_VERBOSE_MAKEFILE ON)
 set(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -rdynamic -O0 -ggdb -std=c++11 -Wall -Wno-deprecated -Werror -Wno-unused-function -Wno-builtin-macro-redefined")
@@ -12,7 +12,7 @@ set(LIB_SRC
     src/ThreadPool.cpp 
     )
 
-add_library(threadpool SHARED ${LIB_SRC})
+add_library(threadpool STATIC ${LIB_SRC})
 
 set(LIB_LIB
     threadpool
